All_Component_DX/force-app/main/default/objects/PM_History__c/PM_History__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Tracks execution of schedules in PM Plan</description>
    <label>PM History</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>