All_Component_DX/force-app/main/default/objects/PM_History__c/fields/Installed_Product__c.field-meta.xml
<CustomField>
    <fullName>Installed_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installed Product</label>
    <referenceTo>Installed_Product__c</referenceTo>
    <relationshipLabel>PM History</relationshipLabel>
    <relationshipName>PM_History</relationshipName>
    <type>Lookup</type>
</CustomField>