All_Component_DX/force-app/main/default/objects/PM_History__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>PM History</relationshipLabel>
    <relationshipName>PM_History</relationshipName>
    <type>Lookup</type>
</CustomField>