All_Component_DX/force-app/main/default/objects/PM_History__c/fields/PM_Coverage__c.field-meta.xml
<CustomField>
    <fullName>PM_Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM Coverage</label>
    <referenceTo>PM_Coverage__c</referenceTo>
    <relationshipLabel>PM History</relationshipLabel>
    <relationshipName>PM_History</relationshipName>
    <type>Lookup</type>
</CustomField>