All_Component_DX/force-app/main/default/objects/PM_History__c/fields/SM_PM_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>SM_PM_Batch_ID__c</fullName>
    <description>This field indicates the Unique batch Id (PM Definition Record ID + PM Next Schedule Date) to identify the batch of the Work Orders created by PM engine.</description>
    <label>PM Batch ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>