All_Component_DX/force-app/main/default/objects/PM_History__c/fields/Work_Order_Created_on__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Created_on__c</fullName>
    <label>Work Order Created on</label>
    <type>DateTime</type>
</CustomField>